<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android-Http-Request-Builder</string>
    <string name="action_config_server">Config Server</string>
    <string name="action_config_request">Config Request</string>
    <string name="action_bar_title">Login Request</string>

    <string name="login_request_button">Do Request</string>
    <string name="login_request_select_server">Please add a new server</string>

    <string name="config_server_select">Select Server</string>
    <string name="config_server_add_server">Add Server</string>
    <string name="config_server_clear">Clear</string>

    <string name="add_btn">Add</string>
    <string name="server">Server:</string>
    <string name="request">Request:</string>
    <string name="port">Port:</string>
    <string name="request_method">Request Method:</string>
    <string name="path">Path:</string>
    <string name="target_path">Target Path</string>

    <string name="choose_server">Choose server</string>
    <string name="fill_request">Fill request</string>
    <string name="pick_port">Pick a port</string>

    <string name="add_server_dialog_title">Add Server</string>
    <string name="add_server_dialog_hint">Type server address</string>

    <string name="config_request_title">Config Request</string>
    <string name="config_request_add">Add Field</string>
    <string name="config_request_clear">Clear</string>
    <string name="config_request_field_name">Field Name</string>
    <string name="config_request_field_value">Field Value</string>

    <string name="add_field_dialog_hint">Type field name</string>
    <string name="add_field_value_dialog_hint">Type field value</string>
    <string name="add_field_dialog_title">Add Field</string>

    <string name="server_available">Server available</string>
    <string name="server_not_available">Server not available</string>

    <string name="server_prefix">http://</string>
    <string name="invalid_path">Invalid Path</string>
    <string name="invalid_json">Invalid Json Body request</string>

    <string name="response_status">Response status code</string>

    <string name="no_internet">No internet connection available</string>
</resources>
