<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/configRequestLayout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_request_title"
            android:id="@+id/configRequestTitle" android:layout_gravity="center"
            android:textSize="@dimen/config_request_title" android:textStyle="bold" android:layout_margin="5dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/configRequestButtonsLayout"
            android:layout_gravity="right" android:layout_margin="5dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_request_clear"
                android:id="@+id/configRequestClearFields" android:drawableLeft="@drawable/broom"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/config_request_add"
                android:id="@+id/configRequestAddField" android:drawableLeft="@drawable/add"/>
    </LinearLayout>
    <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/configRequestListView" android:layout_margin="5dp"/>
</LinearLayout>