<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/configServerLayout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_server_select"
            android:id="@+id/configServerTitle" android:layout_gravity="center"
            android:textSize="@dimen/config_server_title" android:textStyle="bold" android:layout_margin="5dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/configServerButtonsLayout" android:padding="5dp"
            android:layout_gravity="right">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_server_clear"
                android:id="@+id/configServerClearServersBtn" android:drawableLeft="@drawable/broom"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_server_add_server"
                android:id="@+id/configServerAddServerBtn" android:drawableLeft="@drawable/add"
                android:layout_gravity="right" android:layout_margin="5dp"/>
    </LinearLayout>
    <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/configServerListView" android:layout_margin="5dp"/>
</LinearLayout>